--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -144,3 +144,8 @@
 .VPNavBarMenuLink {
     font-size: 18px !important;
 }
+
+a {
+    text-decoration: none !important;
+    display: inline-block;
+}
